--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
   <main id="series-list">
     <!-- Exemple de série -->
     <div class="serie">
-      <a href="series/naruto.html">
-        <img src="https://upload.wikimedia.org/wikipedia/en/9/94/NarutoCoverTankobon1.jpg" alt="Naruto">
-        <h3>Naruto</h3>
+      <a href="series/black butler.html">
+        <img src="https://static.fnac-static.com/multimedia/PE/Images/FR/NR/e3/48/29/2705635/1507-1/tsp20250809084652/Black-Butler-Tome-1.jpg" alt="black butler">
+        <h3>Black butler</h3>
       </a>
       <label>
-        <input type="checkbox" class="complete-checkbox" data-id="naruto"> Série complète
+        <input type="checkbox" class="complete-checkbox" data-id="black butler"> Série complète
       </label>
     </div>
 
@@ -68,4 +68,5 @@
   </script>
 </body>
 </html>
+
 <script type="module" src="js/firebase-init.js"></script>
